--- a/package.json
+++ b/package.json
@@ -1,13 +1,30 @@
 {
-  "name": "starter-micro-api",
+  "name": "fcfm-eris",
   "version": "1.0.0",
-  "description": "Cyclic.sh micro api starter",
+  "description": "Discord Bot Eris Version",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./src/index.js",
+    "start": "node ./src/index.js",
+    "build": ""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "eris": "^0.17.1",
+    "express": "^4.18.1",
+    "libsodium-wrappers": "^0.7.9",
+    "mongoose": "^6.0.7",
+    "pluris": "^0.3.7",
+    "youtube-dl-exec": "^2.1.6",
+    "yt-search": "^2.10.1",
+    "ytdl": "^1.4.1",
+    "ytdl-core": "^4.11.0",
+    "ytpl": "^2.2.3",
+    "ytsearch": "^1.0.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
